--- a/backend/src/main/resources/templates/pages/categorias.html
+++ b/backend/src/main/resources/templates/pages/categorias.html
@@ -36,5 +36,8 @@
     </main>
 
     <footer th:replace="~{layout/base :: footer-comun}"></footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script th:src="@{/js/musica.js}"></script>
 </body>
 </html>
