--- a/backend/src/main/resources/templates/pregunta-home/home.html
+++ b/backend/src/main/resources/templates/pregunta-home/home.html
@@ -85,5 +85,6 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script th:src="@{/js/musica.js}"></script>
 </body>
 </html>
